# sfml-recursive-scrabble-game

./: CMakeLists.txt  README.md  box.cpp  box.h  button.h  construction.cpp  construction.h  main.cpp  objects.cpp  objects.h  slot.h  utilities.cpp  utilities.h  word.cpp  word.h
.cache/clangd/index/: box.cpp.452371CD8B6D1F97.idx  box.h.A60EDAD4A9BCD444.idx  button.h.C79FDE6F5F018407.idx  construction.cpp.7B5E5B3F99C8938E.idx  construction.h.06FDF56D86F55F40.idx  main.cpp.DE2906AA376B6567.idx  objects.cpp.FE68C0522F753A68.idx  objects.h.7CB5A5B0A34C4BF3.idx  slot.h.F1DFEDF5C9407ED2.idx  utilities.cpp.564C1A2F5FCAC265.idx  utilities.h.10A0B48C0F70C9FB.idx  word.cpp.EA9D1EEEA8F8A1FF.idx  word.h.3E2A1E5C7BAF6772.idx
